package com.example.demo;

import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class AuthenticationController {

    @GetMapping("/checkNetworkConnection")
    public Boolean checkNetworkConnection() {
        //  Implementation to check network connection.  Replace with actual logic.
        return true; 
    }
}

package com.example.demo;

import org.springframework.web.bind.annotation.*;

@RestController
@RequestMapping("/auth")
public class AuthenticationController {

    @PostMapping("/validateOrderID")
    public Boolean validateOrderID(@RequestBody String orderID) {
        //Implementation to validate orderID
        return true; // Replace with actual validation logic
    }

    @PostMapping("/validateInput")
    public Boolean validateInput(@RequestBody String input) {
        //Implementation to validate input
        return true; //Replace with actual validation logic

    }
}

package com.example.demo;

import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class AuthenticationController {

    private User loggedInUser;

    @GetMapping("/loginSuccess")
    public void displayLoginSuccess() {
        //Implementation for displaying login success message.  This would likely involve setting a session variable or redirecting to a protected resource.
        System.out.println("Login Successful!");
    }

    @GetMapping("/loginFailure")
    public void displayLoginFailure() {
        //Implementation for displaying login failure message.  This would likely involve displaying an error message to the user.
        System.out.println("Login Failed!");
    }

    @GetMapping("/checkPermission")
    public boolean checkPermission() {
        //Implementation for checking user permissions.  This would likely involve checking roles or permissions against a database.
        //This is a placeholder, replace with actual permission check logic.
        return loggedInUser != null && loggedInUser.getRole().equals("admin");
    }


    public static class User {
        private String role;

        public String getRole() {
            return role;
        }

        public void setRole(String role) {
            this.role = role;
        }
    }
}