package com.example.demo;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class OrderQueryController {

}

package com.example.demo;

import org.springframework.web.bind.annotation.*;

@RestController
@RequestMapping("/orders")
public class OrderQueryController {

    @GetMapping("/{orderID}/{customerID}")
    public void getOrder(@PathVariable String orderID, @PathVariable String customerID) {
        //  Implementation to fetch order details based on orderID and customerID.  This would typically involve a service call to retrieve data from a database.
        boolean success = true; // Replace with actual result from database query.
        if (success) {
            displayValidationResult(true);
        } else {
            displayErrorMessage("Order not found.");
        }
    }


    public void displayValidationResult(Boolean success) {
        //Implementation to display validation result.  This might involve returning a specific HTTP status code or a JSON response.
        System.out.println("Validation Result: " + success);
    }

    public void displayErrorMessage(String message) {
        //Implementation to display error message.  This might involve returning a specific HTTP status code and error message in the response body.
        System.err.println("Error: " + message);
    }

    public void logError(String errorMessage) {
        //Implementation to log error message.  This would typically involve writing the error message to a log file or a logging system.
        System.err.println("Logged Error: " + errorMessage);
    }
}