package com.example.demo;

import org.springframework.web.bind.annotation.RestController;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.http.ResponseEntity;
import org.springframework.http.HttpStatus;

@RestController
@RequestMapping("/orders")
public class OrderUpdateController {


    @PostMapping("/update")
    public ResponseEntity<String> updateOrder(@RequestBody Order order) {
        //  This is a placeholder.  Replace with actual order update logic.
        //  This would typically involve interacting with an Order Service.
        //  Consider error handling and returning appropriate HTTP status codes.
        try {
            //Simulate Order Update
            System.out.println("Order Updated: " + order.toString());
            return ResponseEntity.ok("Order updated successfully");
        } catch (Exception e) {
            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to update order");
        }
    }
}

class Order {
    // Add Order attributes here as needed.  Example:
    private Long orderId;
    private String status;
    // ... other attributes

    //Getters and Setters
    public Long getOrderId() { return orderId; }
    public void setOrderId(Long orderId) { this.orderId = orderId; }
    public String getStatus() { return status; }
    public void setStatus(String status) { this.status = status; }
    // ... other getters and setters

    @Override
    public String toString() {
        return "Order{" +
                "orderId=" + orderId +
                ", status='" + status + '\'' +
                '}';
    }
}